--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg" type="image/x-icon"
   <meta charset="UTF-8">
   <title>Redirecting...</title>
     <script>
